[package]

name = "rust-img-transcoder"
version = "0.0.1"
authors = ["Bryce Fisher-Fleig <bryce@fisher-fleig.org>"]

[dependencies.hyper]
git = "https://github.com/hyperium/hyper"

[dependencies.mime]
git = "https://github.com/hyperium/mime.rs"

[dependencies.image]
git = "https://github.com/PistonDevelopers/image"
